# coda

src/app/cli/src/: dune
src/app/enforce_syntax/: dune  enforce_syntax.ml
src/lib/auxiliary_database/: filtered_external_transition.ml
src/lib/coda_transition/: external_transition.ml
src/lib/ppx_coda/: manual_bin_io.ml
src/lib/ppx_enforce_syntax/: dune  enforce_deriving_usage.ml
src/lib/ppx_enforce_syntax/tests/: Makefile  dune  good_syntax.ml
src/lib/proposer/: proposer.ml
src/lib/staged_ledger/: pre_diff_info.ml  staged_ledger.ml  staged_ledger.mli
src/lib/transition_frontier_controller_tests/: stubs.ml
