;;; each library below has an identical preprocess clause, because of this
;;; dune bug: https://github.com/ocaml/dune/issues/1946

;;; should succeed

(library
  (name good_syntax)
  (libraries core_kernel)
  (library_flags -linkall)
  (preprocess (pps ppx_bin_prot ppx_coda ppx_enforce_syntax))
  (modules good_syntax))

;;; should fail

(library
  (name bad_syntax_missing_version)
  (libraries core_kernel)
  (library_flags -linkall)
  (preprocess (pps ppx_bin_prot ppx_coda ppx_enforce_syntax))
  (modules bad_syntax_missing_version))

(library
  (name bad_syntax_missing_bin_io)
  (libraries core_kernel)
  (library_flags -linkall)
  (preprocess (pps ppx_bin_prot ppx_coda ppx_enforce_syntax))
  (modules bad_syntax_missing_bin_io))
